Fixed footer on mobile devices

--- a/style.css
+++ b/style.css
@@ -669,6 +669,7 @@ h6 {
 		right: 0;
 	}
 	.copyright {
+    font-size: 11px;
     padding: 50px;
 	}
 	footer {
